handle meta tags and change app icon

--- a/index.html
+++ b/index.html
@@ -2,14 +2,40 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/swes.svg" />
+    <link rel="canonical" href="https://swes-rms.netlify.app">
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <meta name="description" content="SWES Reservation Module helps teams easily schedule, manage, and review reservations in a simple, organized interface. Designed for everyday use with a focus on clarity, speed, and reliability.">
+    <meta name="keywords" content="reservation system, booking module, scheduling tool, calendar management, SWES">
+    <meta name="author" content="SWES Team">
+
+    <!-- Open Graph -->
+    <meta property="og:title" content="SWES Reservation Module">
+    <meta property="og:description" content="A straightforward reservation and scheduling module built for practical daily use.">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="/cover.png">
+    <meta property="og:url" content="https://swes-rms.netlify.app">
+
+    <!-- Twitter / X -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="SWES Reservation Module">
+    <meta name="twitter:description" content="Manage reservations and schedules with a simple, focused interface.">
+    <meta name="twitter:image" content="/cover.png">
+
+    <!-- App & theme -->
+    <meta name="theme-color" content="#383838">
+    <meta name="application-name" content="SWES Reservation Module">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="default">
 
     <title>SWES Reservation Module</title>
   </head>
 
   <body>
-    <div id="app"></div>
+    <div id="root"></div>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
