add readme file and a theme color

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <meta name="description" content="SWES Reservation Module helps teams easily schedule, manage, and review reservations in a simple, organized interface. Designed for everyday use with a focus on clarity, speed, and reliability.">
     <meta name="keywords" content="reservation system, booking module, scheduling tool, calendar management, SWES">
     <meta name="author" content="SWES Team">
+    <meta name="theme-color" content="#383838">
+    <meta name="msapplication-TileColor" content="#383838"> 
 
     <!-- Open Graph -->
     <meta property="og:title" content="SWES Reservation Module">
@@ -18,7 +20,7 @@
     <meta property="og:image" content="/cover.png">
     <meta property="og:url" content="https://swes-rms.netlify.app">
 
-    <!-- Twitter / X -->
+    <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="SWES Reservation Module">
     <meta name="twitter:description" content="Manage reservations and schedules with a simple, focused interface.">
