fix netlify 404 page add robot.txt & sitemap.xml files

--- a/index.html
+++ b/index.html
@@ -4,19 +4,15 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     
-    <title>SWES Reservation Module | Efficient Team Scheduling</title>
-    <meta name="title" content="SWES Reservation Module | Efficient Team Scheduling" />
+    <title>SWES Reservation Module | Team Scheduling Solution</title>
+    <meta name="title" content="SWES Reservation Module | Team Scheduling Solution" />
     <meta name="description" content="SWES Reservation Module: A high-speed, reliable tool for teams to schedule and manage reservations with a focus on clarity and organized interface design." />
-    <meta name="keywords" content="reservation system, booking module, scheduling tool, calendar management, SWES" />
-    <meta name="author" content="SWES Team" />
+    <meta name="keywords" content="reservation tool, booking module, scheduling tool, calendar management, SWES" />
+    <meta name="author" content="Mahmoud Elfarargy" />
     <meta name="theme-color" content="#383838" />
-
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 
     <link rel="icon" type="image/svg+xml" href="/swes.svg" />
     <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
-    <link rel="canonical" href="https://swes-rms.netlify.app" />
 
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://swes-rms.netlify.app/" />
@@ -43,7 +39,7 @@
     <noscript>
       <div style="text-align: center; padding: 20px; font-family: sans-serif;">
         <h2>JavaScript Required</h2>
-        <p>We're sorry, but the SWES Reservation Module requires JavaScript to function. Please enable it in your browser settings.</p>
+        <p>You need to enable JavaScript to run this app.</p>
       </div>
     </noscript>
     
